 * Bug fix: Error when the length of xmins is 1 in estimate_xmin (https://github.com/csgillespie/poweRlaw/issues/20).
Thanks to @linzhp
 * Added the tapered power-law distribution

Version 0.20.2
--------------
 * Discrete power-law mle now uses L-BFGS-B optimiser by default
 * Vignette source now included within the package
 * Bug fix in lines methods
 * Bug fix: use data_max argument in estimate_xmin (https://github.com/csgillespie/poweRlaw/issues/13) Thanks to @pgoldberg.


Version 0.20.1
--------------
 * Updated documentation
 * Added swiss_prot data set
 * Renamed NativeAmerican to native_american 
 * Renamed USAmerican to us_american 
 * Changed license to GPL-2 | GPL-3


Version 0.20.0
--------------
 * Added discrete exponential function
 * Added compare_distribution functions
 * dist_pdf now have a log argument
 * Updated documentation
 * Bug fixes


Version 0.17.0
--------------
 * Added discrete lognormal, lognormal and poisson distributions.
 * Generic plot functions added for bootstrap output.
 * Test suite.
 * New examples vignette.
 * Bug fixes

Version 0.16.1
--------------

 * bootstrap_xmin now implements the procedure described in Clauset
 * bootstrap_p estimates the p-value

Version 0.16.0
--------------
 * Added dist_data_cdf_function
 * Can now plot the entire data line and add distribution lines starting at xmin
 * Added vignette
 * Improved documentation
 * Deprecated pl_data data class
 
Version 0.15.2
--------------
 * Generating discrete random numbers took up too much memory. 
   Reduced the threshold for switching to the CTN PL distribution.

Version 0.15.1
--------------
 * Bug fix in the lines and points function


Version 0.15.0
--------------

 * Adding support for continuous power-laws

Version 0.14.4
--------------
  * No visible changes - preparing for future R versions.
  * Added discrete_xmax parameter to the discrete random number generator. This parameter controls where we change from using  