@@ -10,6 +10,7 @@
 <<<<<<< HEAD
 <<<<<<< HEAD
 <<<<<<< HEAD
+<<<<<<< HEAD
 \alias{contappl}
 \alias{contappl-class}
 =======
@@ -24,6 +25,10 @@
 \alias{conpltap}
 \alias{conpltap-class}
 >>>>>>> Starting to add taper pl
+=======
+\alias{contappl}
+\alias{contappl-class}
+>>>>>>> Adding tapered power-law distribution
 \alias{disexp}
 \alias{disexp-class}
 \alias{dislnorm}
@@ -39,6 +44,7 @@
 <<<<<<< HEAD
 <<<<<<< HEAD
 <<<<<<< HEAD
+<<<<<<< HEAD
   contappl(...)
 =======
   conpltap(...)
@@ -49,6 +55,9 @@
 =======
   conpltap(...)
 >>>>>>> Starting to add taper pl
+=======
+  contappl(...)
+>>>>>>> Adding tapered power-law distribution
 
   conlnorm(...)
 
